--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@tiptap/extension-highlight": "^2.6.5",
+    "@tiptap/starter-kit": "^2.6.5",
+    "@tiptap/vue-3": "^2.6.5",
     "vue": "^3.5.0"
   },
   "devDependencies": {
