--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^2.6.5",
     "@tiptap/extension-highlight": "^2.6.5",
     "@tiptap/starter-kit": "^2.6.5",
     "@tiptap/vue-3": "^2.6.5",
