--- a/ui/package.json
+++ b/ui/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173"
+    "preview": "vite preview --port 5173",
+    "test": "node tests/dateUtils.test.js && node tests/categoryUtils.test.js && node tests/searchUtils.test.js && node tests/taskDocUtils.test.js",
+    "lint": "eslint \"src/**/*.{js,vue}\" \"tests/**/*.js\""
   },
   "dependencies": {
     "@tiptap/extension-image": "^2.6.5",
@@ -16,7 +18,13 @@
     "vue": "^3.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "globals": "^15.9.0",
+    "@vue/test-utils": "^2.4.4",
+    "vitest": "^1.6.0"
   }
 }
