--- a/ui/package.json
+++ b/ui/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint \"src/**/*.{js,vue}\" \"tests/**/*.js\""
   },
   "dependencies": {
-    "@tiptap/extension-image": "^2.6.5",
     "@tiptap/extension-highlight": "^2.6.5",
+    "@tiptap/extension-image": "^2.6.5",
+    "@tiptap/extension-task-item": "^2.6.5",
+    "@tiptap/extension-task-list": "^2.6.5",
     "@tiptap/starter-kit": "^2.6.5",
     "@tiptap/vue-3": "^2.6.5",
     "vue": "^3.5.0"
@@ -20,11 +22,11 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.4.0",
+    "@vue/test-utils": "^2.4.4",
     "eslint": "^9.13.0",
     "eslint-plugin-vue": "^9.28.0",
     "globals": "^15.9.0",
-    "@vue/test-utils": "^2.4.4",
-    "vitest": "^1.6.0"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18"
   }
 }
